--- a/site/index.html
+++ b/site/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Welcome</title>
+	<title>Добро пожаловать!</title>
 	<link rel="stylesheet" type="text/css" href="css/markup.css">
 	<link rel="stylesheet" type="text/css" href="css/theme.css">
 </head>
@@ -10,15 +10,17 @@
 	<div class="main-backgroung">
 		<img class="main-backgroung-image"src="images/main.jpg">
 	</div>
-	<div class="login-block flex-column">
-		<div class="welcome-text-block flex-column">
-			<p class="welcome-text">Добро пожаловать!</p>
-		</div>
-		<div class="login-button button">
-			<p class="login-text">Вход</p>
-		</div>
-		<div class="sing-up-button button">
-			<p class="sing-up-text">Регистрация</p>
+	<div class="welcome-block flex-column">
+		<div class="welcome-form flex-column">
+			<div class="welcome-text-block flex-column">
+				<p class="welcome-text">Добро пожаловать!</p>
+			</div>
+			<div class="login-welcome-button button">
+				<p class="login-welcome-text">Вход</p>
+			</div>
+			<div class="sing-up-welcome-button button">
+				<p class="sing-up-welcome-text">Регистрация</p>
+			</div>
 		</div>
 	</div>
 </body>
