--- a/site/main.html
+++ b/site/main.html
@@ -29,16 +29,56 @@
 	</div>
 	<div class="menu flex-column">
 		<ul class="menu-list">
-			<li class="menu-item">Пункт меню</li>
-			<li class="menu-item">Пункт меню</li>
-			<li class="menu-item">Пункт меню</li>
-			<li class="menu-item">Пункт меню</li>
-			<li class="menu-item">Пункт меню</li>
-			<li class="menu-item">Пункт меню</li>
-			<li class="menu-item">Пункт меню</li>
-			<li class="menu-item">Пункт меню</li>
-			<li class="menu-item">Пункт меню</li>
-			<li class="menu-item">Пункт меню</li>
+			<li class="menu-item">
+				<div class="menu-item-container">
+					<p class="menu-item-text">Пункт меню</p>
+				</div>
+			</li>
+			<li class="menu-item">
+				<div class="menu-item-container">
+					<p class="menu-item-text">Пункт меню</p>
+				</div>
+			</li>
+			<li class="menu-item">
+				<div class="menu-item-container">
+					<p class="menu-item-text">Пункт меню</p>
+				</div>
+			</li>
+			<li class="menu-item">
+				<div class="menu-item-container">
+					<p class="menu-item-text">Пункт меню</p>
+				</div>
+			</li>
+			<li class="menu-item">
+				<div class="menu-item-container">
+					<p class="menu-item-text">Пункт меню</p>
+				</div>
+			</li>
+			<li class="menu-item">
+				<div class="menu-item-container">
+					<p class="menu-item-text">Пункт меню</p>
+				</div>
+			</li>
+			<li class="menu-item">
+				<div class="menu-item-container">
+					<p class="menu-item-text">Пункт меню</p>
+				</div>
+			</li>
+			<li class="menu-item">
+				<div class="menu-item-container">
+					<p class="menu-item-text">Пункт меню</p>
+				</div>
+			</li>
+			<li class="menu-item">
+				<div class="menu-item-container">
+					<p class="menu-item-text">Пункт меню</p>
+				</div>
+			</li>
+			<li class="menu-item">
+				<div class="menu-item-container">
+					<p class="menu-item-text">Пункт меню</p>
+				</div>
+			</li>
 		</ul>
 	</div>
 </body>
