html changes auth done

--- a/site/main.html
+++ b/site/main.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 	<div class="entire-page flex-column">
-		<div class="header flex-row">
+		<div class="header-container">
+			<div class="header flex-row">
 			<div class="filler"></div>
 			<div class="user-container">
 				<p class="user-name-text">Имя</p>
@@ -17,17 +18,71 @@
 				<p class="info-text">Справка</p>
 			</div>
 		</div>
+		</div>
 		<div class="content flex-row">
 			<p>Тарифы:</p>
-			<div class="template-container"></div>
-			<div class="template-container"></div>
-			<div class="template-container"></div>
-			<div class="template-container"></div>
-			<div class="template-container"></div>
-			<div class="template-container"></div>
-		</div>
+			<div class="template-container flex-column">
+				<div class="template-name-container"><p class="template-name-text">Тариф</p></div>
+				<div class="template-info-container">
+				<p class="template-info-text">Информация о тарифе</p>
+				<p class="template-info-text">Информация о тарифе</p>
+				<p class="template-info-text">Информация о тарифе</p>
+			</div>
+				<div class="submit-button-container">
+					<div class="button submit-template-button">Подать заявку</div>
+				</div>
+			</div>
+			<div class="template-container flex-column">
+				<div class="template-name-container"><p class="template-name-text">Тариф</p></div>
+				<div class="template-info-container">
+				<p class="template-info-text">Информация о тарифе</p>
+				<p class="template-info-text">Информация о тарифе</p>
+				<p class="template-info-text">Информация о тарифе</p>
+			</div>
+				<div class="submit-button-container">
+					<div class="button submit-template-button">Подать заявку</div>
+				</div>
+			</div>
+			<div class="template-container flex-column">
+				<div class="template-name-container"><p class="template-name-text">Тариф</p></div>
+				<div class="template-info-container">
+				<p class="template-info-text">Информация о тарифе</p>
+				<p class="template-info-text">Информация о тарифе</p>
+				<p class="template-info-text">Информация о тарифе</p>
+			</div>
+				<div class="submit-button-container">
+					<div class="button submit-template-button">Подать заявку</div>
+				</div>
+			</div>
+			<div class="template-container flex-column">
+				<div class="template-name-container"><p class="template-name-text">Тариф</p></div>
+				<div class="template-info-container">
+				<p class="template-info-text">Информация о тарифе</p>
+				<p class="template-info-text">Информация о тарифе</p>
+				<p class="template-info-text">Информация о тарифе</p>
+			</div>
+				<div class="submit-button-container">
+					<div class="button submit-template-button">Подать заявку</div>
+				</div>
+			</div>
+			<div class="template-container flex-column">
+				<div class="template-name-container"><p class="template-name-text">Тариф</p></div>
+				<div class="template-info-container">
+				<p class="template-info-text">Информация о тарифе</p>
+				<p class="template-info-text">Информация о тарифе</p>
+				<p class="template-info-text">Информация о тарифе</p>
+			</div>
+				<div class="submit-button-container">
+					<div class="button submit-template-button">Подать заявку</div>
+				</div>
+			</div>
+			
+			<div class="template-container flex-column">
+				<div class="new-template-button button">Новый тариф</div>
+			</div>
 	</div>
 	<div class="menu flex-column">
+		<div class="menu-icon">≡</div>
 		<ul class="menu-list">
 			<li class="menu-item">
 				<div class="menu-item-container">
