--- a/site/index.html
+++ b/site/index.html
@@ -5,11 +5,14 @@
 	<title>Добро пожаловать!</title>
 	<link rel="stylesheet" type="text/css" href="css/markup.css">
 	<link rel="stylesheet" type="text/css" href="css/theme.css">
+	<script src="../src/main/webapp/site/script/jquery-3.2.1.js"></script>
+	<script src="script/scripts.js"></script>
 </head>
 <body>
 	<div class="main-backgroung">
 		<img class="main-backgroung-image"src="images/main.jpg">
 	</div>
+	
 	<div class="welcome-block flex-column">
 		<div class="welcome-form flex-column">
 			<div class="welcome-text-block flex-column">
@@ -20,6 +23,24 @@
 			</div>
 			<div class="sing-up-welcome-button button">
 				<p class="sing-up-welcome-text">Регистрация</p>
+			</div>
+		</div>
+	</div>
+
+	<div class="login-block flex-column hidden">
+		<div class="login-form flex-column">
+			<div class="login-text-block flex-column">
+				<p class="login-text">Введите свои учетные данные:</p>
+			</div>
+			<p class="login-text">Логин:</p>
+			<input type="text" class="login"></input>
+			<p class="login-text">Пароль:</p>
+			<input type="password" class="password"></input>
+			<div class="login-button button">
+				<p class="login-text">Вход</p>
+			</div>
+			<div class="cancel-login-button button">
+				<p class="cancel-login-text">Отмена</p>
 			</div>
 		</div>
 	</div>
