html changes template creation done space creation done

--- a/site/main.html
+++ b/site/main.html
@@ -5,6 +5,8 @@
 	<title>Коворкинг</title>
 	<link rel="stylesheet" type="text/css" href="css/markup.css">
 	<link rel="stylesheet" type="text/css" href="css/theme.css">
+	<script src="script/jquery-3.2.1.js"></script>
+	<script src="script/scripts.js"></script>
 </head>
 <body>
 	<div class="entire-page flex-column">
@@ -136,5 +138,53 @@
 			</li>
 		</ul>
 	</div>
+
+<div class="create-template-form-block form-block flex-column ">
+		<div class="create-template-form form flex-column">
+
+			<div class="create-template-text-block form-caption flex-row">
+				<p class="create-template-text">Создание тарифа</p>
+			</div>
+			
+			<div class="parameters-container flex-column">
+				<div class="template-name-container flex-row form-input-container">
+					<p class="template-name-text">Название: </p>
+					<input type="text" class="template-name text-input"/>
+				</div>
+
+				<div class="space-type-container flex-row form-input-container">
+					<p class="space-type-text">Переговорная комната: </p>
+					<input type="checkbox" class="space-type checkbox-input"/>
+				</div>
+				
+				<div class="fixed-place-container flex-row form-input-container">
+					<p class="fixed-place-text">Фиксированное рабочее место: </p>
+					<input type="checkbox" class="fixed-place checkbox-input"/>
+				</div>
+				
+				<div class="full-week-container flex-row form-input-container">
+					<p class="full-week-text">Полная неделя: </p>
+					<input type="checkbox" class="full-week checkbox-input"/>
+				</div>
+
+				<div class="count-of-places-container flex-row form-input-container">
+					<p class="count-of-places-text">Количество рабочих мест: </p>
+					<input type="text" class="count-of-places text-input"/>
+				</div>
+
+				<div class="base-price-container flex-row form-input-container">
+					<p class="base-price-text">Базовая цена за час: </p>
+					<input type="text" class="base-price text-input"/>
+				</div>
+
+				<div class="buttons-container flex-row">
+					<div class="button submit-create-template-button">Создать</div>
+					<div class="button cancel-create-template-button">Отмена</div>
+				</div>
+			</div>
+
+		</div>
+	</div>
+
 </body>
 </html>
